syntax = "proto3";

package ai.stigmer.agentic.workflowexecution.v1;

import "ai/stigmer/agentic/workflowexecution/v1/api.proto";
import "ai/stigmer/agentic/workflowexecution/v1/enum.proto";
import "buf/validate/validate.proto";

// WorkflowExecutionId wraps a workflow execution identifier.
//
// This wrapper message is used as input for RPCs that need an execution ID.
// Using a wrapper (instead of a raw string) provides:
// - Validation (required field enforcement)
// - Clear field naming ("value" instead of unnamed parameter)
// - Extensibility (can add fields later without breaking API)
//
// Format: "wfx-{unique-suffix}"
// Example: "wfx-abc123xyz456"
//
// Used By:
// - get(WorkflowExecutionId): Get a single execution by ID
// - delete(WorkflowExecutionId): Delete an execution (if implemented)
message WorkflowExecutionId {
  // Workflow execution identifier.
  //
  // Format: "wfx-{unique-suffix}" (auto-generated by backend)
  // Example: "wfx-abc123xyz456"
  //
  // Validation: Required field, cannot be empty
  string value = 1 [(buf.validate.field).required = true];
}

// WorkflowId wraps a workflow or workflow instance identifier for filtering.
//
// This wrapper is used to filter executions by a specific Workflow or WorkflowInstance.
// It can accept either:
// - Workflow ID (wf-{slug}): Lists all executions of any instance of this workflow
// - WorkflowInstance ID (wfi-{slug}): Lists executions of a specific instance
//
// Format Examples:
// - Workflow ID: "wf-customer-onboarding"
// - WorkflowInstance ID: "wfi-customer-onboarding-prod"
//
// Used By:
// - list_by_workflow(ListWorkflowExecutionsByWorkflowRequest): Filter executions by workflow
message WorkflowId {
  // Workflow or WorkflowInstance identifier.
  //
  // Can be either:
  // - Workflow ID (wf-{slug}): Filter by workflow template
  // - WorkflowInstance ID (wfi-{slug}): Filter by specific instance
  //
  // Examples:
  // - "wf-customer-onboarding" (all instances of this workflow)
  // - "wfi-customer-onboarding-prod" (specific instance)
  //
  // Validation: Required field, cannot be empty
  string value = 1 [(buf.validate.field).required = true];
}

// WorkflowExecutionList contains a paginated list of workflow executions.
//
// This message is returned by list operations (list, list_by_workflow).
// It includes pagination metadata to help clients navigate through large result sets.
//
// Pagination Pattern:
// 1. Client sends request with page_size (e.g., 50)
// 2. Server returns up to page_size entries + total_pages count
// 3. Client displays entries and "Page 1 of N" indicator
// 4. Client can request next page using page_token from response
//
// Example Usage:
// Response for page 1:
// {
//   "total_pages": 10,
//   "entries": [ execution1, execution2, ... execution50 ]
// }
message WorkflowExecutionList {
  // Total number of pages available for this query.
  //
  // Calculated as: ceil(total_matching_executions / page_size)
  //
  // Example: If 237 executions match and page_size=50, total_pages=5
  //
  // Use Cases:
  // - Display pagination UI ("Page 1 of 5")
  // - Disable "Next" button when on last page
  // - Show total result count (total_pages * page_size approximation)
  //
  // Note: total_pages may change between requests if new executions are created
  // or deleted, or if filters change.
  int32 total_pages = 1;

  // Workflow executions in the current page.
  //
  // Contains up to page_size WorkflowExecution resources.
  // May contain fewer than page_size if:
  // - This is the last page (fewer remaining results)
  // - Fewer results match the filter criteria
  //
  // Executions are sorted by created_at descending (newest first).
  //
  // Example:
  // entries: [
  //   { metadata: { id: "wfx-newest", created_at: "2025-01-11T14:30:22Z" }, ... },
  //   { metadata: { id: "wfx-second", created_at: "2025-01-11T10:15:00Z" }, ... },
  //   { metadata: { id: "wfx-third", created_at: "2025-01-10T22:05:33Z" }, ... }
  // ]
  repeated WorkflowExecution entries = 2;
}

// ListWorkflowExecutionsRequest specifies parameters for listing workflow executions.
//
// Supports pagination and filtering to help users find specific executions.
// Used by the list() RPC to retrieve executions across all workflows.
//
// Common Use Cases:
// - List all recent executions (no filters)
// - List all in-progress executions (phase filter)
// - List all failed executions (phase filter)
// - List executions for specific environment (tags filter)
// - Page through execution history (pagination)
message ListWorkflowExecutionsRequest {
  // Maximum number of executions to return per page.
  //
  // Default: 50 (if not specified or 0)
  // Maximum: 100 (backend enforces this limit)
  //
  // Recommendation: Use 20-50 for UI lists, 100 for bulk exports
  //
  // Example: page_size=20 returns up to 20 executions
  int32 page_size = 1;

  // Token for pagination, obtained from previous response.
  //
  // Opaque string generated by the server to represent a cursor in the result set.
  //
  // Pagination Flow:
  // 1. Initial request: page_token is empty (or not set)
  // 2. Server returns first page + page_token for next page
  // 3. Subsequent request: include page_token from previous response
  // 4. Server returns next page + new page_token
  // 5. When page_token is empty in response, no more pages available
  //
  // Example:
  // Request 1: { page_size: 50 }
  // Response 1: { entries: [...], page_token: "eyJvZmZzZXQiOjUwfQ==" }
  // Request 2: { page_size: 50, page_token: "eyJvZmZzZXQiOjUwfQ==" }
  // Response 2: { entries: [...], page_token: "" }  // Last page
  //
  // Note: page_token is opaque - clients should not parse or modify it.
  string page_token = 2;

  // Filter by execution phase (optional).
  //
  // Limits results to executions in a specific phase.
  // If not specified (or EXECUTION_PHASE_UNSPECIFIED), all phases are included.
  //
  // Common Filters:
  // - EXECUTION_IN_PROGRESS: Show only running executions
  // - EXECUTION_FAILED: Show only failed executions (for debugging)
  // - EXECUTION_COMPLETED: Show only successful executions
  //
  // Example Use Cases:
  // - Monitor dashboard: phase=EXECUTION_IN_PROGRESS
  // - Debug dashboard: phase=EXECUTION_FAILED
  // - Success audit: phase=EXECUTION_COMPLETED
  //
  // Example: phase=2 (EXECUTION_IN_PROGRESS)
  ExecutionPhase phase = 3;

  // Filter by resource tags (optional).
  //
  // Limits results to executions that have ALL specified tags (AND logic).
  // Tags are key-value pairs stored in metadata.tags.
  //
  // Tag Format: "key:value" or "key" (for boolean tags)
  // Example tags:
  // - "environment:production"
  // - "team:backend"
  // - "critical"
  // - "region:us-west-2"
  //
  // Filtering Logic:
  // If tags=["environment:production", "team:backend"], result must have BOTH tags.
  //
  // Example Use Cases:
  // - List production executions: tags=["environment:production"]
  // - List backend team's critical executions: tags=["team:backend", "critical"]
  // - List executions in specific region: tags=["region:us-west-2"]
  //
  // Example:
  // tags: ["environment:production", "critical"]
  repeated string tags = 4;
}

// ListWorkflowExecutionsByWorkflowRequest lists all executions for a specific workflow.
//
// Filters executions by Workflow or WorkflowInstance ID.
// Used to view execution history for a particular workflow.
//
// Difference from ListWorkflowExecutionsRequest:
// - ListWorkflowExecutionsRequest: Lists executions across ALL workflows (with optional filters)
// - ListWorkflowExecutionsByWorkflowRequest: Lists executions for ONE specific workflow
//
// Use Cases:
// - Workflow details page: Show execution history for this workflow
// - Workflow testing: View all test runs of this workflow
// - Performance analysis: Analyze execution patterns for this workflow
message ListWorkflowExecutionsByWorkflowRequest {
  // Workflow or WorkflowInstance ID to filter by.
  //
  // Can be either:
  // - Workflow ID (wf-{slug}): Lists all executions of any instance
  // - WorkflowInstance ID (wfi-{slug}): Lists executions of specific instance
  //
  // Examples:
  // - "wf-customer-onboarding" (all instances: prod, dev, staging)
  // - "wfi-customer-onboarding-prod" (only prod instance)
  //
  // Validation: Required field, cannot be empty
  //
  // Error Cases:
  // - NOT_FOUND: No Workflow/WorkflowInstance with this ID exists
  // - PERMISSION_DENIED: User doesn't have access to this Workflow/WorkflowInstance
  string workflow_id = 1 [(buf.validate.field).required = true];

  // Maximum number of executions to return per page.
  //
  // Default: 50 (if not specified or 0)
  // Maximum: 100 (backend enforces this limit)
  //
  // Example: page_size=20 returns up to 20 executions
  int32 page_size = 2;

  // Token for pagination, obtained from previous response.
  //
  // Same pagination semantics as ListWorkflowExecutionsRequest.page_token.
  //
  // Example:
  // Request 1: { workflow_id: "wfi-prod", page_size: 50 }
  // Response 1: { entries: [...], page_token: "abc123" }
  // Request 2: { workflow_id: "wfi-prod", page_size: 50, page_token: "abc123" }
  string page_token = 3;
}

// SubscribeWorkflowExecutionRequest subscribes to real-time execution updates.
//
// Opens a server-side streaming RPC that pushes WorkflowExecution updates
// as the execution progresses through its lifecycle.
//
// Stream Behavior:
// 1. Client sends this request with execution_id
// 2. Server validates authorization (user must have "get" permission)
// 3. Server sends initial WorkflowExecution (current state)
// 4. Server streams updates as execution state changes
// 5. Server closes stream when execution reaches terminal state
//
// Use Cases:
// - Real-time progress monitoring in UI
// - Live dashboards showing execution status
// - Debugging with live updates
// - Multi-user collaborative monitoring
message SubscribeWorkflowExecutionRequest {
  // Execution ID to subscribe to.
  //
  // Format: "wfx-{unique-suffix}"
  // Example: "wfx-abc123xyz456"
  //
  // Validation: Required field, cannot be empty
  //
  // Error Cases:
  // - NOT_FOUND: No WorkflowExecution with this ID exists
  // - PERMISSION_DENIED: User doesn't have "get" permission on this execution
  //
  // Example:
  // execution_id: "wfx-abc123xyz456"
  //
  // After subscription starts, client receives:
  // - Initial message: Current state of execution
  // - Update messages: Changes to status.phase, status.tasks, etc.
  // - Final message: Execution reached terminal state (COMPLETED/FAILED/CANCELLED)
  // - Stream closes automatically after final message
  string execution_id = 1 [(buf.validate.field).required = true];
}

// WorkflowExecutionUpdate represents a real-time execution update event.
//
// This message is used for WebSocket or SSE (Server-Sent Events) streaming
// to provide granular updates about what changed in the execution.
//
// Difference from subscribe() RPC:
// - subscribe() RPC: Sends full WorkflowExecution on each update
// - WorkflowExecutionUpdate: Sends only what changed (more efficient for high-frequency updates)
//
// Use Cases:
// - WebSocket streaming (more efficient than full execution on each update)
// - Event sourcing patterns (replay update events to reconstruct state)
// - Real-time UI updates (apply delta updates to cached state)
//
// Note: Currently not used by subscribe() RPC (which sends full WorkflowExecution).
// This message is reserved for future WebSocket/SSE streaming implementations.
message WorkflowExecutionUpdate {
  // Type of update that occurred.
  //
  // Determines which fields in this message are populated:
  // - wf_update_status_changed: execution.status.phase changed
  // - wf_update_task_started: task changed to IN_PROGRESS
  // - wf_update_task_completed: task changed to COMPLETED
  // - wf_update_task_failed: task changed to FAILED
  // - wf_update_execution_completed: execution reached COMPLETED
  // - wf_update_execution_cancelled: execution reached CANCELLED
  //
  // Validation: Must be a defined enum value (not unspecified)
  WorkflowUpdateType update_type = 1 [(buf.validate.field).enum.defined_only = true];

  // Updated execution (full or partial).
  //
  // For efficiency, may contain only changed fields:
  // - wf_update_status_changed: Full execution with updated status.phase
  // - wf_update_task_*: Partial execution with updated status.tasks[i]
  // - wf_update_execution_completed: Full execution with final state
  //
  // Clients should merge this with cached state to get complete picture.
  //
  // Example (task completed update):
  // execution: {
  //   metadata: { id: "wfx-abc123" },
  //   status: {
  //     completed_tasks: 1,
  //     tasks: [
  //       { task_id: "task-1", status: WORKFLOW_TASK_COMPLETED, output: {...} }
  //     ]
  //   }
  // }
  WorkflowExecution execution = 2;

  // Updated task (if update_type is task-related).
  //
  // Populated when update_type is:
  // - wf_update_task_started
  // - wf_update_task_completed
  // - wf_update_task_failed
  //
  // Provides direct access to the changed task without searching execution.status.tasks[].
  //
  // Example (task completed):
  // task: {
  //   task_id: "task-1",
  //   task_name: "validate_email",
  //   status: WORKFLOW_TASK_COMPLETED,
  //   output: { "valid": true },
  //   completed_at: "2025-01-11T14:30:27Z"
  // }
  WorkflowTask task = 3;
}

// WorkflowUpdateType defines the type of workflow execution update event.
//
// Used by WorkflowExecutionUpdate to indicate what changed in the execution.
// Helps clients apply efficient delta updates instead of re-rendering entire UI.
//
// Event Sequence Example:
// 1. wf_update_status_changed (PENDING → IN_PROGRESS)
// 2. wf_update_task_started (task-1 started)
// 3. wf_update_task_completed (task-1 completed)
// 4. wf_update_task_started (task-2 started)
// 5. wf_update_task_completed (task-2 completed)
// 6. wf_update_execution_completed (workflow done)
enum WorkflowUpdateType {
  // Unspecified update type (invalid, should never be used).
  workflow_update_type_unspecified = 0;

  // Workflow execution phase changed.
  //
  // Triggered when status.phase transitions:
  // - PENDING → IN_PROGRESS (execution started)
  // - IN_PROGRESS → COMPLETED (execution succeeded)
  // - IN_PROGRESS → FAILED (execution failed)
  // - IN_PROGRESS → CANCELLED (execution cancelled)
  //
  // UI Impact: Update status badge, progress indicator
  wf_update_status_changed = 1;

  // A workflow task started executing.
  //
  // Triggered when task status changes from PENDING to IN_PROGRESS.
  //
  // Update includes:
  // - task.status = WORKFLOW_TASK_IN_PROGRESS
  // - task.started_at = current timestamp
  //
  // UI Impact: Show spinner/loading indicator for this task
  wf_update_task_started = 2;

  // A workflow task completed successfully.
  //
  // Triggered when task status changes from IN_PROGRESS to COMPLETED.
  //
  // Update includes:
  // - task.status = WORKFLOW_TASK_COMPLETED
  // - task.output = task results
  // - task.completed_at = current timestamp
  // - execution.completed_tasks incremented
  //
  // UI Impact: Show checkmark, display task output, update progress bar
  wf_update_task_completed = 3;

  // A workflow task failed.
  //
  // Triggered when task status changes from IN_PROGRESS to FAILED.
  //
  // Update includes:
  // - task.status = WORKFLOW_TASK_FAILED
  // - task.error = error message
  // - task.completed_at = current timestamp
  // - execution.completed_tasks incremented
  //
  // UI Impact: Show error icon, display error message, may trigger workflow failure
  wf_update_task_failed = 4;

  // Workflow execution completed successfully.
  //
  // Triggered when all tasks completed and workflow produces final output.
  //
  // Update includes:
  // - execution.status.phase = EXECUTION_COMPLETED
  // - execution.status.output = workflow results
  // - execution.status.completed_at = current timestamp
  //
  // UI Impact: Show success badge, display final output, enable download/export
  //
  // Note: This is a terminal event - no more updates will follow.
  wf_update_execution_completed = 5;

  // Workflow execution was cancelled.
  //
  // Triggered when user or system cancels the execution.
  //
  // Update includes:
  // - execution.status.phase = EXECUTION_CANCELLED
  // - execution.status.completed_at = current timestamp
  //
  // UI Impact: Show cancelled badge, grey out in-progress tasks
  //
  // Note: This is a terminal event - no more updates will follow.
  wf_update_execution_cancelled = 6;
}
